# binance-scalping-bot

./: Cargo.toml  README.md  SETUP.md  config.toml.example
src/: backtester.rs  binance.rs  config.rs  indicators.rs  lib.rs  main.rs  ml_model.rs  strategy.rs
