[package]
name = "binance-scalping-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rust_decimal = { version = "1.0", features = ["serde"] }
toml = "0.8"
ctrlc = "3.4"
base64 = "0.22"
url = "2"

linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15.6"
smartcore = { version = "0.2.1", features = ["serde"] }

